--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
 .search-home{
     background-image: url(./images/banner.png);
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 .find-location{
     margin-bottom: 4.4rem;
